# unizip

./: CMakeLists.txt  README.en.md  README.md  build.sh  cmake_uninstall.cmake.in  config.h.in  unizip.pc.in
cmake/: checker.cmake  options.cmake  set_build_flags.cmake
src/: CMakeLists.txt  damo.c  damo.h  unizip.h  unizip_adapt.c  unizip_adapt.h  unizip_error_code.h  unizip_struct.h
src/7zip/: unizip_algorithm_7zip.c  unizip_algorithm_7zip.h  unizip_callback_7zip.c  unizip_callback_7zip.h
src/brotli/: unizip_algorithm_brotli.c  unizip_algorithm_brotli.h  unizip_callback_brotli.c  unizip_callback_brotli.h
src/bzip2/: unizip_algorithm_bzip2.c  unizip_algorithm_bzip2.h  unizip_callback_bzip2.c  unizip_callback_bzip2.h
src/gzip/: unizip_callback_gzip.c  unizip_callback_gzip.h
src/lz4/: unizip_algorithm_lz4.c  unizip_algorithm_lz4.h  unizip_callback_lz4.c  unizip_callback_lz4.h
src/snappy/: unizip_algorithm_snappy.c  unizip_algorithm_snappy.h  unizip_callback_snappy.c  unizip_callback_snappy.h
src/uadk/: unizip_algorithm_uadk.c  unizip_algorithm_uadk.h  unizip_callback_uadk.c  unizip_callback_uadk.h
src/xz/: unizip_algorithm_xz.c  unizip_algorithm_xz.h  unizip_callback_xz.c  unizip_callback_xz.h
src/zlib/: unizip_callback_zlib.c  unizip_callback_zlib.h
src/zstd/: unizip_algorithm_zstd.c  unizip_algorithm_zstd.h  unizip_callback_zstd.c  unizip_callback_zstd.h
test/: 7zip_util.cpp  CMakeLists.txt  FindBrotli.cmake  FindLZ4.cmake  FindZstd.cmake  brotli_util.cpp  bzip2_util.cpp  gzip_util.cpp  lz4_util.cpp  main.cpp  snappy_util.cpp  test_util.cpp  test_util.h  uadk_util.cpp  xz_util.cpp  zlib_func.cpp  zlib_util.cpp  zstd_util.cpp
tests/: CMakeLists.txt  damo_ut.cpp  main.cpp
